bool-op/y.output
Grammaire

    0 $accept: axiom $end

    1 axiom: condition '\n'

    2 condition: expr '>' expr
    3          | condition OR condition
    4          | condition AND condition
    5          | NOT condition
    6          | '(' condition ')'
    7          | expr '=' expr

    8 expr: ID
    9     | NUM


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'\n' (10) 1
'(' (40) 6
')' (41) 6
'=' (61) 7
'>' (62) 2
error (256)
OR (258) 3
AND (259) 4
NOT (260) 5
ID (261) 8
NUM (262) 9


Non-terminaux, suivis des règles où ils apparaissent

$accept (13)
    à gauche: 0
axiom (14)
    à gauche: 1, à droite: 0
condition (15)
    à gauche: 2 3 4 5 6 7, à droite: 1 3 4 5 6
expr (16)
    à gauche: 8 9, à droite: 2 7


État 0

    0 $accept: . axiom $end

    NOT  décalage et aller à l'état 1
    ID   décalage et aller à l'état 2
    NUM  décalage et aller à l'état 3
    '('  décalage et aller à l'état 4

    axiom      aller à l'état 5
    condition  aller à l'état 6
    expr       aller à l'état 7


État 1

    5 condition: NOT . condition

    NOT  décalage et aller à l'état 1
    ID   décalage et aller à l'état 2
    NUM  décalage et aller à l'état 3
    '('  décalage et aller à l'état 4

    condition  aller à l'état 8
    expr       aller à l'état 7


État 2

    8 expr: ID .

    $défaut  réduction par utilisation de la règle 8 (expr)


État 3

    9 expr: NUM .

    $défaut  réduction par utilisation de la règle 9 (expr)


État 4

    6 condition: '(' . condition ')'

    NOT  décalage et aller à l'état 1
    ID   décalage et aller à l'état 2
    NUM  décalage et aller à l'état 3
    '('  décalage et aller à l'état 4

    condition  aller à l'état 9
    expr       aller à l'état 7


État 5

    0 $accept: axiom . $end

    $end  décalage et aller à l'état 10


État 6

    1 axiom: condition . '\n'
    3 condition: condition . OR condition
    4          | condition . AND condition

    OR    décalage et aller à l'état 11
    AND   décalage et aller à l'état 12
    '\n'  décalage et aller à l'état 13


État 7

    2 condition: expr . '>' expr
    7          | expr . '=' expr

    '>'  décalage et aller à l'état 14
    '='  décalage et aller à l'état 15


État 8

    3 condition: condition . OR condition
    4          | condition . AND condition
    5          | NOT condition .

    $défaut  réduction par utilisation de la règle 5 (condition)


État 9

    3 condition: condition . OR condition
    4          | condition . AND condition
    6          | '(' condition . ')'

    OR   décalage et aller à l'état 11
    AND  décalage et aller à l'état 12
    ')'  décalage et aller à l'état 16


État 10

    0 $accept: axiom $end .

    $défaut  accepter


État 11

    3 condition: condition OR . condition

    NOT  décalage et aller à l'état 1
    ID   décalage et aller à l'état 2
    NUM  décalage et aller à l'état 3
    '('  décalage et aller à l'état 4

    condition  aller à l'état 17
    expr       aller à l'état 7


État 12

    4 condition: condition AND . condition

    NOT  décalage et aller à l'état 1
    ID   décalage et aller à l'état 2
    NUM  décalage et aller à l'état 3
    '('  décalage et aller à l'état 4

    condition  aller à l'état 18
    expr       aller à l'état 7


État 13

    1 axiom: condition '\n' .

    $défaut  réduction par utilisation de la règle 1 (axiom)


État 14

    2 condition: expr '>' . expr

    ID   décalage et aller à l'état 2
    NUM  décalage et aller à l'état 3

    expr  aller à l'état 19


État 15

    7 condition: expr '=' . expr

    ID   décalage et aller à l'état 2
    NUM  décalage et aller à l'état 3

    expr  aller à l'état 20


État 16

    6 condition: '(' condition ')' .

    $défaut  réduction par utilisation de la règle 6 (condition)


État 17

    3 condition: condition . OR condition
    3          | condition OR condition .
    4          | condition . AND condition

    AND  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 3 (condition)


État 18

    3 condition: condition . OR condition
    4          | condition . AND condition
    4          | condition AND condition .

    $défaut  réduction par utilisation de la règle 4 (condition)


État 19

    2 condition: expr '>' expr .

    $défaut  réduction par utilisation de la règle 2 (condition)


État 20

    7 condition: expr '=' expr .

    $défaut  réduction par utilisation de la règle 7 (condition)
